--- a/2020/1005.md
+++ b/2020/1005.md
@@ -14,4 +14,4 @@ In this case, we would pass something like `onOptionChange('mystatekey', 1234)` 
 
 ## Vote repo created
 
-Started [a document for the upcoming November election](https://github.com/robballou/vote/blob/main/2020/1103.md) in a new vote repo.
+Started [a document for the upcoming November election](https://github.com/robballou/vote/blob/main/2020/1103.md) in a new vote repo. *Update*: received ballot on 10/10.
