--- a/2020/1012.md
+++ b/2020/1012.md
@@ -17,3 +17,7 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 ```
+
+## Zod: something to look at
+
+Recently saw this in slack, which would be super useful for some of my side projects: https://vriad.com/essays/zod
