Finished 1012, added 1018 and a script to make new weeknote files

--- a/2020/1012.md
+++ b/2020/1012.md
@@ -18,6 +18,17 @@ flex-direction: column;
 justify-content: center;
 ```
 
+A simple thing that I have done many times in a few different ways. I appreciated this one cause it was also a container within a grid with multiple children. And
+this was to address feedback to push content down a little which I hate cause the content could change and then the top margin has to change, etc.
+
 ## Zod: something to look at
 
 Recently saw this in slack, which would be super useful for some of my side projects: https://vriad.com/essays/zod
+
+## Keyboard
+
+I bought a mech keyboard for my work laptop because I think the bluetooth on that machine is a bit wonky, so USB was needed. This is my first mech (WASD 88-key, cherry MX red silent) which is taking some getting used to. I picked the 88-key cause I felt like I rarely used the numpad... but now I miss that. I also didn't really register that the keyboards I'm used to using have the arrow keys beneath the right shift key. So I downloaded a program to change keys. Currently experimenting with the right-control key being `end` or `right arrow`. Unfortunately, it doesn't seem like I can program the menu key.
+
+## Trying to learn new keyboard shortcuts
+
+VSCode: ctrl+shift+right arrow to expand selection (word -> line, etc.)
