--- a/2020/1018.md
+++ b/2020/1018.md
@@ -1,2 +1,5 @@
 # October 18 - October 19
 
+## `--trace-warnings`
+
+One our test suites would eventually get a warning about `MaxListenersExceededWarning`. Running tests with `--trace-warnings` allowed me to see the stack for when that occurred and discover that we have a global event emitter that never gets reset.
