--- a/2020/1019.md
+++ b/2020/1019.md
@@ -5,3 +5,21 @@
 ## `--trace-warnings`
 
 One our test suites would eventually get a warning about `MaxListenersExceededWarning`. Running tests with `--trace-warnings` allowed me to see the stack for when that occurred and discover that we have a global event emitter that never gets reset.
+
+## babel & finally removing polyfill
+
+Recently changed a project's babel configuration to:
+
+```
+["@babel/preset-env", {
+    "useBuiltIns": "entry",
+    "corejs": 3,
+    "modules": false,
+    "targets": {
+        "chrome": "79",
+        "edge": "79"
+    }
+}],
+```
+
+This helps eliminate the need for polyfill and regenerator-runtime. But it also meant that tests started failing, but I was able to fix that by copying this configuration to where we have `@babel/register` and changing `modules` to `true`. These changes allowed us to remove `@babel/polyfill`, `core-js`, `regenerator-runtime`, and one babel plugin.
