--- a/2020/1026.md
+++ b/2020/1026.md
@@ -1,2 +1,5 @@
 # October 26 - November 1
 
+## js-rotatelib
+
+Updated [js-rotatelib](https://github.com/robballou/js-rotatelib/tree/modernize) to bring it more in line with current JS practices. Still need to test some more and then release it!
