Updated 1102 and added 1109

--- a/2020/1102.md
+++ b/2020/1102.md
@@ -1,3 +1,13 @@
 # November 2 - November 8
 
 [« 10/26](1026.md)
+
+## Nested types in Typescript
+
+```
+type NestedStringArray = (string | string[])[];
+```
+
+## Soundbar
+
+I recently got a soundbar and had some trouble with audio syncing with connected devices. I switched the sound to "pass through" mode and now it's better.
