--- a/2020/1102.md
+++ b/2020/1102.md
@@ -1,6 +1,6 @@
 # November 2 - November 8
 
-[« 10/26](1026.md)
+[« 10/26](1026.md) | [11/09 »](1109.md)
 
 ## Nested types in Typescript
 
@@ -11,3 +11,13 @@ type NestedStringArray = (string | string[])[];
 ## Soundbar
 
 I recently got a soundbar and had some trouble with audio syncing with connected devices. I switched the sound to "pass through" mode and now it's better.
+
+## Entertainment recommendations
+
+As November 5 fell during this week, I continued my tradition of watching _V for Vendetta_, this year on BluRay.
+
+I also binged _The Queen's Gambit_ on Netflix which was very good.
+
+## Return to yoga?
+
+Sunday night I did my first home yoga session in a while which was a nice workout for my back issues. I think I really need to add a few session in each week.
