--- a/2020/1109.md
+++ b/2020/1109.md
@@ -23,3 +23,26 @@ const firstThing = records['thing' as keyof SomeRecords];
 ```
 
 When I switched `SomeRecords` to `Record<string, RecordType>`, the `firstThing` line would blow up. The fix was simply dropping `as keyof SomeRecords` as TS will now recognize `'thing'` is valid for that record type.
+
+## Wait with new (for nodejs) AbortController
+
+In Node 15, we gain [the Abort Controller from browsers](https://developer.mozilla.org/en-US/docs/Web/API/AbortController). I created a wait function like:
+
+```javascript
+let abort = null
+async function wait (ms = null) {
+  abort = new AbortController()
+  let waitTimeout = null
+
+  return new Promise((resolve, reject) => {
+    waitTimeout = setTimeout(() => resolve(), ms ?? getRandomIntInclusive(60 * 1000 * 5, 60 * 1000 * 15))
+    abort.signal.addEventListener('abort', () => {
+      if (waitTimeout) {
+        clearTimeout(waitTimeout)
+        waitTimeout = null
+        reject(new Error('Aborted'))
+      }
+    })
+  })
+}
+```
