--- a/2020/1109.md
+++ b/2020/1109.md
@@ -51,5 +51,5 @@ async function wait (ms = null) {
 
 Added two web searches in [Alfred App](https://www.alfredapp.com/):
 
-- [MDN search & show results](alfred://customsearch/MDN/mdn/utf8/%2B/https%3A%2F%2Fduckduckgo.com%2F%3Fq%3Dsite%3Adeveloper.mozilla.org%2B%7Bquery%7D)
-- [MDN "feeling lucky" search](alfred://customsearch/MDN%20Lucky/mdnl/utf8/nospace/https%3A%2F%2Fduckduckgo.com%2F%3Fq%3Dsite%3Adeveloper.mozilla.org%2B%7Bquery%7D%2B%21)
+- MDN search & show results: `alfred://customsearch/MDN/mdn/utf8/%2B/https%3A%2F%2Fduckduckgo.com%2F%3Fq%3Dsite%3Adeveloper.mozilla.org%2B%7Bquery%7D`
+- MDN "feeling lucky" search: `alfred://customsearch/MDN%20Lucky/mdnl/utf8/nospace/https%3A%2F%2Fduckduckgo.com%2F%3Fq%3Dsite%3Adeveloper.mozilla.org%2B%7Bquery%7D%2B%21`
