Cleanup code and reverse index

--- a/2020/1019.md
+++ b/2020/1019.md
@@ -10,7 +10,7 @@ One our test suites would eventually get a warning about `MaxListenersExceededWa
 
 Recently changed a project's babel configuration to:
 
-```
+```javascript
 ["@babel/preset-env", {
     "useBuiltIns": "entry",
     "corejs": 3,
