--- a/2020/1116.md
+++ b/2020/1116.md
@@ -13,9 +13,11 @@ So you can do:
 
     get<K extends keyof Data>(key: K): Promise<Data[k]>
 
+This will ensure the uses of the method will keep their typing throughout, so: `instance.get('akey')` will have it's proper type!
+
 ## Generics for interfaces
 
-Was struggling a bit with interfaces that then use generics. Initially had:
+I was struggling a bit with interfaces that then use generics. Initially had:
 
     interface Jsonable {
         toJSON(): any;
