New week, adding topic index by hand

--- a/2020/1123.md
+++ b/2020/1123.md
@@ -1,3 +1,7 @@
 # November 23 - November 29
 
+[« 11/16](1116.md) | [11/30 »](1130.md)
+
 Thanksgiving week, pandemic style!
+
+... that's it, no notes this week
