--- a/2020/1130.md
+++ b/2020/1130.md
@@ -14,3 +14,7 @@ const dismissHelpClicked = useCallback(() => {
 ```
 
 I was questioning the use of `useCallback` here and general concensus is that's really not doing much besides adding complexity since `setIsShowingHelp` isn't going to knowingly change at any point.
+
+## Random: Coffee
+
+Shopping with a mask made shopping for coffee beans a challenge, but am happy to blind pickup [these beans](https://blkandbold.com/collections/fair-trade-specialty-coffees/products/rise-grnd-blend-1). I'm not a coffee snop and these fits nicely into the morning cup of coffee realm for me.
