--- a/2020/1130.md
+++ b/2020/1130.md
@@ -13,7 +13,7 @@ const dismissHelpClicked = useCallback(() => {
 }, [setIsShowingHelp]);
 ```
 
-I was questioning the use of `useCallback` here and general concensus is that's really not doing much besides adding complexity since `setIsShowingHelp` isn't going to knowingly change at any point.
+I was questioning the use of `useCallback` here and general concensus is that's really not doing much besides adding complexity since `setIsShowingHelp` isn't going to knowingly change at any point. **Note:** additionally, it should be pointed out that you don't need a state setter as part of dependencies here...
 
 ## Random: Coffee
 
