Adding weeknotes for 2020-12-10

--- a/2020/1207.md
+++ b/2020/1207.md
@@ -2,3 +2,16 @@
 
 [« 11/30](1130.md)
 
+## Because I always forget how mocking things work in Jest
+
+```typescript
+import { getThing } from './Thing';
+
+jest.mock('./Thing');
+
+test('thing', () => {
+    (getThing as jest.Mock).mockImplementation(() => ({
+        aMethod: () => Promise.resolve(null),
+    }));
+});
+```
