--- a/2020/1207.md
+++ b/2020/1207.md
@@ -1,6 +1,6 @@
 # December 7 - December 13
 
-[« 11/30](1130.md)
+[« 11/30](1130.md) | [12/14 »](1214.md)
 
 ## Because I always forget how mocking things work in Jest
 
@@ -15,3 +15,5 @@ test('thing', () => {
     }));
 });
 ```
+
+I still find jest mocks a bit cludgy vs sinon and usually have to wrestle a bit with it.
