--- a/2020/1214.md
+++ b/2020/1214.md
@@ -1,3 +1,15 @@
 # December 14 - December 20
 
 [« 12/07](1207.md)
+
+## unitless line-height
+
+I might have known this at some point, but:
+
+```css
+/* Unitless values: use this number multiplied
+by the element's font size */
+line-height: 3.5;
+```
+
+Source: https://developer.mozilla.org/en-US/docs/Web/CSS/line-height
