--- a/2020/1214.md
+++ b/2020/1214.md
@@ -4,7 +4,7 @@
 
 ## unitless line-height
 
-I might have known this at some point, but:
+I might have known this at some point, but forgot about it:
 
 ```css
 /* Unitless values: use this number multiplied
