--- a/2021/0104.md
+++ b/2021/0104.md
@@ -1,13 +1,5 @@
 # January 4 - January 10
 
-[« 12/21/2020](../2020/1221.md)
+[« 12/21/2020](../2020/1221.md) | [01/11/2020 »](0111.md)
 
-# ReturnType in Typescript
-
-Finally saw a use of this in the wild:
-
-```
-let myTimeout: ReturnType<typeof setTimeout> = null;
-```
-
-Then you can use vanilla `setTimeout` and `clearTimeout` correctly without `window` or other hackery.
+Nothing!
