--- a/2021/0111.md
+++ b/2021/0111.md
@@ -1,2 +1,21 @@
 # January 11 - January 17
 
+## Mocking getBoundingClientRect
+
+We have some components that use [`getBoundingClientRect()`](https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect) to figure out their width/height. This was one way I found to mock that.
+
+```typescript
+let tree;
+renderer.act(() => {
+    tree = renderer.create(component, {
+        createNodeMock: () => ({
+            getBoundingClientRect: jest.fn().mockImplementation(() => ({ width: 1000 })),
+        }),
+    });
+});
+expect(tree.toJSON()).toMatchSnapshot();
+```
+
+## Presidential impeachment
+
+For the second time, President Trump was impeached by the House of Representatives today for inciting insurrection. We probably won't have a Senate trial till after the inauguration but I wanted to note this down as a historic thing that is happening during this time. He is the first president to be impeached twice.
