--- a/2021/0111.md
+++ b/2021/0111.md
@@ -16,6 +16,10 @@ renderer.act(() => {
 expect(tree.toJSON()).toMatchSnapshot();
 ```
 
+## xstate
+
+Someone shared this and might be worth digging into later: https://github.com/davidkpiano/xstate
+
 ## Presidential impeachment
 
 For the second time, President Trump was impeached by the House of Representatives today for inciting insurrection. We probably won't have a Senate trial till after the inauguration but I wanted to note this down as a historic thing that is happening during this time. He is the first president to be impeached twice.
