--- a/2021/0118.md
+++ b/2021/0118.md
@@ -5,3 +5,7 @@
 ## Dev tools commented out CSS
 
 Today I learned that commented out rules in CSS show up in devtools. Most projects have been in an in a preprocessor which omits commented lines so I guess I hadn't noticed they will show up when doing vanilla CSS.
+
+## Inauguration Day
+
+Every four years, the United States inaugurates a new President. This year we almost did not. Over the course of three Wednesdays we had: a violent coup attempt, an impeachment, and now inauguration day.
