--- a/2021/0118.md
+++ b/2021/0118.md
@@ -9,3 +9,7 @@ Today I learned that commented out rules in CSS show up in devtools. Most projec
 ## Inauguration Day
 
 Every four years, the United States inaugurates a new President. This year we almost did not. Over the course of three Wednesdays we had: a violent coup attempt, an impeachment, and now inauguration day.
+
+## This Week I Learned
+
+- *internecine*: destructive to both sides in a conflict
