--- a/2021/0125.md
+++ b/2021/0125.md
@@ -1,3 +1,7 @@
 # January 25 - January 31
 
 [« 01/18/2021](0118.md)
+
+## ESLINT Cache
+
+Eslint has a `--cache` option (and a location option to put it somewhere specific) which can greatly speedup linting.
