New week, new notes

--- a/2021/0208.md
+++ b/2021/0208.md
@@ -1,3 +1,27 @@
 # February 8 - February 14
 
-[« 02/01/2021](0208.md)
+[« 02/01/2021](0201.md) | [02/15/2021 »](0215.md)
+
+## OOP Battles
+
+Often I see OSS projects that have code like:
+
+```
+class CoolStuff {
+  private thingYouWantToUse = 'asdf';
+
+  function someMethod() {
+    //...
+
+    $thing = new CoolStuffSupportingClass();
+
+    //...
+  }
+}
+```
+
+And here you cannot use `thingYouWantToUse` or change what `someMethod` is doing.
+
+## This Week I Learned
+
+- *obsequious*: obedient or attentive to an excessive or servile degree
