--- a/2021/0215.md
+++ b/2021/0215.md
@@ -1,3 +1,7 @@
 # February 15 - February 21
 
 [« 02/08/2021](0208.md)
+
+# Perseverance Landing
+
+We landed a robot on mars! (again, but still cool)
