--- a/2021/0301.md
+++ b/2021/0301.md
@@ -2,3 +2,18 @@
 
 [« 02/22/2021](0222.md)
 
+## Alternates to webpack
+
+Debating if any of the slew of new build tools work well for a mixed JS/TS project.
+
+### Snowpack
+
+https://www.snowpack.dev/concepts/how-snowpack-works
+
+So the big difference here is Snowpack does "unbundled development" which ships things individually during development and bundling only when you go to production.
+
+### Vite
+
+https://vitejs.dev/guide/why.html
+
+This seems similar in approach: using ESM for development and Rollup for production. Also the TS support is without typechecking, preferring to do that in IDE/build instead of the dev server.
