Update the notes

--- a/2021/0315.md
+++ b/2021/0315.md
@@ -2,3 +2,8 @@
 
 [« 03/08/2021](0308.md)
 
+## Chrome captions
+
+This would be interesting to check out at some point:
+
+https://blog.google/products/chrome/live-caption-chrome/
