--- a/2021/0315.md
+++ b/2021/0315.md
@@ -7,3 +7,28 @@
 This would be interesting to check out at some point:
 
 https://blog.google/products/chrome/live-caption-chrome/
+
+## navigator.permissions.query
+
+Found an interesting case where an add-in we are making does not have permission in chrome to write to the clipboard API. So I added a call to query for the permissions. Turns out Firefox *and* the typescript definition for this don't like `clipboard-write` even though that is supported by the spec & Chrome, so:
+
+```typescript
+let canUseClipboard = true;
+try {
+    const permissionStatus = await navigator.permissions.query({
+        name: 'clipboard-write' as PermissionName,
+    });
+    if (permissionStatus.state === 'denied') {
+        console.warn('copy denied');
+        canUseClipboard = false;
+    }
+    console.info('copy allowed');
+}
+catch (err) {
+    console.warn('could not detect copy ability, default to true');
+    /* intentional */
+}
+```
+
+In Firefox, this will fail to detect whether we can copy... but in this case we can.
+
