--- a/2021/0322.md
+++ b/2021/0322.md
@@ -5,3 +5,28 @@
 ## ls -S
 
 Based on [this tweet from Command Line Magic](https://twitter.com/climagic/status/1374755575557451777) I also learned about the `-S` option to sort on size.
+
+
+## navigator.permissions.query
+
+Found an interesting case where an add-in we are making does not have permission in chrome to write to the clipboard API. So I added a call to query for the permissions. Turns out Firefox *and* the typescript definition for this don't like `clipboard-write` even though that is supported by the spec & Chrome, so:
+
+```typescript
+let canUseClipboard = true;
+try {
+    const permissionStatus = await navigator.permissions.query({
+        name: 'clipboard-write' as PermissionName,
+    });
+    if (permissionStatus.state === 'denied') {
+        console.warn('copy denied');
+        canUseClipboard = false;
+    }
+    console.info('copy allowed');
+}
+catch (err) {
+    console.warn('could not detect copy ability, default to true');
+    /* intentional */
+}
+```
+
+In Firefox, this will fail to detect whether we can copy... but in this case we can.
